Fix homepage narrowScreen Logo alignment

--- a/themes/basakbeykoz/react-src/src/views/canvas/_canvas_page_home.scss
+++ b/themes/basakbeykoz/react-src/src/views/canvas/_canvas_page_home.scss
@@ -124,6 +124,9 @@ $standardGroupInnerblockPadding: 100px;
               & > img {
                 width: 100%;
                 height: 100%;
+                @include narrowScreen() {
+                  width: auto;
+                }
               }
             }
             h1 {
